cli: consolidate --directory globally + outstanding tree
Wire -C/--directory through GlobalOptions + ActiveConfig so every
non-passthrough command resolves the project root via
global.workingDir(). Removes the per-command @Option duplicate from
~27 leaves. Mvn/Gradle passthroughs keep their local flag since they
forward it to the wrapped tool.

Also includes accumulated WIP across NewCommand, toolchain probes,
JdkSelector/Installer/Registry, TUI components, audit, and parsers.